--- a/src/index.html
+++ b/src/index.html
@@ -67,15 +67,15 @@
         </div>
 
           <div class="recent-work box mt-[50vh]" id="work">
-            <h1 class="font-black text-6xl text-white ml-[8vw]"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
+            <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
-            <div class="work-one mt-[15vh] ml-[12vw] flex">
-              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+            <div class="work-one mt-[15vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
+              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
 
-              <div class="work-one_writeup w-[35%] ml-[5vw]">
-                <h1 class="text-end mt-[6vh] text-lg">Marius Odediran V1</h1>
+              <div class="work-one_writeup w-[35%] ml-[5vw] max-sm:w-[95%] max-sm:ml-3">
+                <h1 class="text-end mt-[6vh] text-lg max-sm:text-start">Marius Odediran V1</h1>
                 <p class="bg-rose-500 px-6 py-4 mt-7">This is my Personal Portfolio Website(V1)🚀. Get to know a bit about me</p>
-                <div class="work-one_btns flex justify-end mt-5">
+                <div class="work-one_btns flex justify-end mt-5 max-sm:justify-start">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
                     <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
@@ -90,7 +90,7 @@
                   </button>
                 </div>
 
-                <div class="w-fit mt-6 ml-[28vw]"><a href="https://mariusodediran.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
+                <div class="w-fit mt-6 ml-[28vw] max-sm:ml-0"><a href="https://mariusodediran.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
             </div>
 
