--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
             <div class="work-one mt-[15vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
-              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3 max-sm:click:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
 
               <div class="work-one_writeup w-[35%] ml-[5vw] max-sm:w-[95%] max-sm:ml-3">
                 <h1 class="text-end mt-[6vh] text-lg max-sm:text-start">Marius Odediran V1</h1>
