--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
             <div class="work-one mt-[15vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
-              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3 max-sm:click:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+              <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3 max-sm:click:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full transition duration-300 work-img"></div>
 
               <div class="work-one_writeup w-[35%] ml-[5vw] max-sm:w-[95%] max-sm:ml-3">
                 <h1 class="text-end mt-[6vh] text-lg max-sm:text-start">Marius Odediran V1</h1>
@@ -117,7 +117,7 @@
                 <div class="w-fit mt-6"><a href="https://earnest-kataifi-e1407d.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
 
-              <div class="work-img w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Bookmark-page.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Bookmark-page.png" class="w-full grayscale transition duration-300 hover:grayscale-0 work-img"></div>
             </div>
 
             <div class="work-three mt-[30vh] ml-[12vw] flex">
@@ -168,7 +168,7 @@
                 <div class="w-fit mt-6"><a href="https://mariusweatherappv1.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
 
-              <div class="work-img w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Simple weather app.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Simple weather app.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
             </div>
 
           </div>
