--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
             <div class="work-one mt-[15vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
-              <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3 max-sm:click:animate-pulse"><img src="assets/Portfolio1-img.png" class="w-full transition duration-300 work-img"></div>
+              <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3"><img src="assets/Portfolio1-img.png" class="w-full transition duration-300 work-img"></div>
 
               <div class="work-one_writeup w-[35%] ml-[5vw] max-sm:w-[95%] max-sm:ml-3">
                 <h1 class="text-end mt-[6vh] text-lg max-sm:text-start">Marius Odediran V1</h1>
@@ -94,11 +94,11 @@
               </div>
             </div>
 
-            <div class="work-two mt-[30vh] ml-[12vw] flex">
+            <div class="work-two mt-[30vh] ml-[12vw] flex max-sm:flex-col-reverse max-sm:ml-3">
               
-              <div class="work-two_writeup w-[35%] ml-[0vw]">
+              <div class="work-two_writeup w-[35%] ml-[0vw] max-sm:w-[96%] max-sm:ml-1.5">
                 <h1 class="mt-[6vh] text-lg">Bookmark</h1>
-                <p class="bg-rose-500 px-6 py-4 mt-7">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+                <p class="bg-rose-500 px-6 py-4 mt-7 max-sm:px-3.5">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <div class="work-one_btns flex justify-start mt-5">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
@@ -117,11 +117,11 @@
                 <div class="w-fit mt-6"><a href="https://earnest-kataifi-e1407d.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
 
-              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Bookmark-page.png" class="w-full grayscale transition duration-300 hover:grayscale-0 work-img"></div>
+              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-1.5"><img src="assets/Bookmark-page.png" class="w-full transition duration-300 work-img"></div>
             </div>
 
-            <div class="work-three mt-[30vh] ml-[12vw] flex">
-              <div class="work-img w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Eazybanks.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+            <div class="work-three mt-[30vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
+              <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Eazybanks.png" class="w-full transition duration-300 work-img"></div>
 
               <div class="work-three_writeup w-[35%] ml-[5vw]">
                 <h1 class="text-end mt-[6vh] text-lg">Eazybanks</h1>
@@ -168,7 +168,7 @@
                 <div class="w-fit mt-6"><a href="https://mariusweatherappv1.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
 
-              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Simple weather app.png" class="w-full grayscale transition duration-300 hover:grayscale-0"></div>
+              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Simple weather app.png" class="w-full transition duration-300"></div>
             </div>
 
           </div>
