--- a/src/index.html
+++ b/src/index.html
@@ -121,12 +121,12 @@
             </div>
 
             <div class="work-three mt-[30vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
-              <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Eazybanks.png" class="w-full transition duration-300 work-img"></div>
+              <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3"><img src="assets/Eazybanks.png" class="w-full transition duration-300 work-img"></div>
 
-              <div class="work-three_writeup w-[35%] ml-[5vw]">
-                <h1 class="text-end mt-[6vh] text-lg">Eazybanks</h1>
+              <div class="work-three_writeup w-[35%] ml-[5vw] max-sm:w-[95%] max-sm:ml-3">
+                <h1 class="text-end mt-[6vh] text-lg max-sm:text-start">Eazybanks</h1>
                 <p class="bg-rose-500 px-6 py-4 mt-7">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
-                <div class="work-one_btns flex justify-end mt-5">
+                <div class="work-one_btns flex justify-end mt-5 max-sm:justify-start">
                   <button class="mr-2 relative flex items-center border-[0.1px] border-solid border-red-400/30 rounded-md py-3 px-4 overflow-hidden">
                     <p class="text-[0.7rem]">HTML</p>
                     <span class="absolute inset-x-0 h-0.5 -bottom-[1px] bg-gradient-to-r w-3/4 mx-auto from-transparent via-rose-300 to-transparent"></span>
@@ -141,13 +141,13 @@
                   </button>
                 </div>
 
-                <div class="w-fit mt-6 ml-[28vw]"><a href="https://taupe-pithivier-e7e77b.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
+                <div class="w-fit mt-6 ml-[28vw] max-sm:ml-0"><a href="https://taupe-pithivier-e7e77b.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
             </div>
 
-            <div class="work-four mt-[30vh] ml-[12vw] flex">
+            <div class="work-four mt-[30vh] ml-[12vw] flex max-sm:flex-col-reverse max-sm:ml-3">
               
-              <div class="work-two_writeup w-[35%] ml-[0vw]">
+              <div class="work-two_writeup w-[35%] ml-[0vw] max-sm:w-[96%] max-sm:ml-1.5">
                 <h1 class="mt-[6vh] text-lg">Weather App</h1>
                 <p class="bg-rose-500 px-6 py-4 mt-7">A basic weather app that tells the weather forecast of the loaction inputted.</p>
                 <div class="work-one_btns flex justify-start mt-5">
@@ -168,7 +168,7 @@
                 <div class="w-fit mt-6"><a href="https://mariusweatherappv1.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square text-gray-400 hover:text-white"></i></a></div>
               </div>
 
-              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse"><img src="assets/Simple weather app.png" class="w-full transition duration-300"></div>
+              <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-1.5"><img src="assets/Simple weather app.png" class="w-full transition duration-300"></div>
             </div>
 
           </div>
