--- a/src/index.html
+++ b/src/index.html
@@ -176,37 +176,37 @@
           <section class="myskill-sec box mt-[50vh]">
             <div class="container">
               <div class="my-skills">
-                <h1 class="font-black text-6xl text-white ml-[8vw]">My <span class="font-black text-stroke-white">Skills</span></h1>
-                <div class="myskill-grid grid grid-cols-2 gap-4 mt-[10vh]">
+                <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4">My <span class="font-black text-stroke-white">Skills</span></h1>
+                <div class="myskill-grid grid grid-cols-2 gap-4 mt-[10vh] max-sm:block">
                   
-                  <div class="skill-1">
+                  <div class="skill-1 max-sm:mt-[5vh]">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">HTML/CSS</h5>
-                    <div class="progress-bar">
+                    <div class="progress-bar w-[70%] mt-[2vh] ml-[8vw] max-sm:w-[95%] max-sm:ml-3">
                       <div class="inner-bar1 inner-bars"><p class="text-center text-white font-black">90%</p></div>
                     </div>
                   </div>
         
-                  <div class="skill-2">
+                  <div class="skill-2 max-sm:mt-[5vh]">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">JavaScript</h5>
-                    <div class="progress-bar">
+                    <div class="progress-bar w-[70%] mt-[2vh] ml-[8vw] max-sm:w-[95%] max-sm:ml-3">
                       <div class="inner-bar2"><p class="text-center text-white font-black">16%</p></div>
                     </div>
                   </div>
-                  <div class="skill-3">
+                  <div class="skill-3 max-sm:mt-[5vh]">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">UI/UX Design</h5>
-                    <div class="progress-bar">
+                    <div class="progress-bar w-[70%] mt-[2vh] ml-[8vw] max-sm:w-[95%] max-sm:ml-3">
                       <div class="inner-bar3"><p class="text-center text-white font-black">60%</p></div>
                     </div>
                   </div>
-                  <div class="skill-4">
+                  <div class="skill-4 max-sm:mt-[5vh]">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">Git/GitHub</h5>
-                    <div class="progress-bar">
+                    <div class="progress-bar w-[70%] mt-[2vh] ml-[8vw] max-sm:w-[95%] max-sm:ml-3">
                       <div class="inner-bar4"><p class="text-center text-white font-black">70%</p></div>
                     </div>
                   </div>
-                  <div class="skill-5">
+                  <div class="skill-5 max-sm:mt-[5vh]">
                     <h5 class="text-[rgb(211,211,211)] text-[1.2rem] text-center">AWS</h5>
-                    <div class="progress-bar">
+                    <div class="progress-bar w-[70%] mt-[2vh] ml-[8vw] max-sm:w-[95%] max-sm:ml-3">
                       <div class="inner-bar5"><p class="text-center text-white font-black">10%</p></div>
                     </div>
                   </div>
