--- a/src/index.html
+++ b/src/index.html
@@ -218,16 +218,16 @@
     </main>
 
     <footer class="mt-[50vh] mb-[10vh] box" id="contact">
-      <h1 class="font-medium text-stroke-white text-6xl text-center">Get In <span class="text-white">Touch</span></h1>
-      <p class="text-center text-gray-400 mt-[5vh]">I am open to collaborating on your next project idea.</p>
+      <h1 class="font-medium text-stroke-white text-6xl text-center max-sm:text-center">Get In <span class="text-white">Touch</span></h1>
+      <p class="text-center text-gray-400 mt-[5vh] max-sm:text-center">I am open to collaborating on your next project idea.</p>
 
-      <div class="icons-flex flex justify-center gap-8 mt-[5vh]">
+      <div class="icons-flex flex justify-center gap-8 mt-[5vh] max-sm:justify-center">
         <a href="https://github.com/Marius-Diran" target="_blank"><i class="fa-brands fa-github text-gray-400 text-xl hover:text-white"></i></a>
         <a href="https://www.linkedin.com/in/marius-odediran-94795b235/" target="_blank"><i class="fa-brands fa-linkedin-in text-gray-400 text-xl hover:text-white"></i></a>
         <a href="https://x.com/Marius_Odediran" target="_blank"><i class="fa-brands fa-x-twitter text-gray-400 text-xl hover:text-white"></i></a>
       </div>
       
-      <button class="contact-btn border-2 border-solid border-gray-400 px-5 py-3 rounded-full ml-[45vw] mt-[5vh] hover:shadow-[0_0_10px_rgba(227,38,54,0.3)]"><a href="mailto:themariusodediran@gmail.com" class="text-gray-400 hover:text-gray-300">Send a Mail</a><i class="fa-regular fa-paper-plane text-gray-400 ml-2"></i></button>
+      <button class="contact-btn border-2 border-solid border-gray-400 px-5 py-3 rounded-full ml-[45vw] mt-[5vh] hover:shadow-[0_0_10px_rgba(227,38,54,0.3)] max-sm:ml-[32.5vw]"><a href="mailto:themariusodediran@gmail.com" class="text-gray-400 hover:text-gray-300">Send a Mail</a><i class="fa-regular fa-paper-plane text-gray-400 ml-2"></i></button>
     </footer>
 
     <script src="https://kit.fontawesome.com/ad2f1382aa.js" crossorigin="anonymous"></script>
