--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="assets/Logo-small.png" sizes="16x16">
+    <title>Marius Odediran || Front-End Developer.</title>
     <link href="./output.css" rel="stylesheet">
   </head>
   <body class="bg-[rgba(2,3,23,1)] text-white overflow-x-hidden scroll-smooth">
