--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       </div>
     </header>
 
-    <main class="mt-[35vh]">
+    <main class="mt-[26vh]">
       <div class="container">
         <div class="aboutme-page box mb-[30vh]" id="about">
           <div class="aboutme-flex flex max-sm:block">
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-          <div class="recent-work box mt-[50vh]" id="work">
+          <div class="recent-work box mt-[30vh]" id="work">
             <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4"><span class="font-black text-stroke-white">My Recent</span> Works</h1> 
 
             <div class="work-one mt-[15vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
@@ -96,7 +96,7 @@
               </div>
             </div>
 
-            <div class="work-two mt-[30vh] ml-[12vw] flex max-sm:flex-col-reverse max-sm:ml-3">
+            <div class="work-two mt-[30vh] ml-[12vw] flex max-sm:flex-col-reverse max-sm:ml-3 max-sm:mt-[15vh]">
               
               <div class="work-two_writeup w-[35%] ml-[0vw] max-sm:w-[96%] max-sm:ml-1.5">
                 <h1 class="mt-[6vh] text-lg">Bookmark</h1>
@@ -122,7 +122,7 @@
               <div class="workimg-div w-[45%] ml-[5vw] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-1.5"><img src="assets/Bookmark-page.png" class="w-full transition duration-300 work-img"></div>
             </div>
 
-            <div class="work-three mt-[30vh] ml-[12vw] flex max-sm:block max-sm:ml-0">
+            <div class="work-three mt-[30vh] ml-[12vw] flex max-sm:block max-sm:ml-0 max-sm:mt-[15vh]">
               <div class="workimg-div w-[45%] border-[0.9rem] border-solid border-black rounded-2xl outline-[1px] outline-solid outline-white/10 transform transition duration-300 grayscale hover:grayscale-0 hover:scale-105 hover:shadow-2xl hover:animate-pulse max-sm:w-[95%] max-sm:ml-3"><img src="assets/Eazybanks.png" class="w-full transition duration-300 work-img"></div>
 
               <div class="work-three_writeup w-[35%] ml-[5vw] max-sm:w-[95%] max-sm:ml-3">
@@ -147,7 +147,7 @@
               </div>
             </div>
 
-            <div class="work-four mt-[30vh] ml-[12vw] flex max-sm:flex-col-reverse max-sm:ml-3">
+            <div class="work-four mt-[30vh] ml-[12vw] flex max-sm:flex-col-reverse max-sm:ml-3 max-sm:mt-[15vh]">
               
               <div class="work-two_writeup w-[35%] ml-[0vw] max-sm:w-[96%] max-sm:ml-1.5">
                 <h1 class="mt-[6vh] text-lg">Weather App</h1>
@@ -175,7 +175,7 @@
 
           </div>
 
-          <section class="myskill-sec box mt-[50vh]">
+          <section class="myskill-sec box mt-[30vh]">
             <div class="container">
               <div class="my-skills">
                 <h1 class="font-black text-6xl text-white ml-[8vw] max-sm:ml-4">My <span class="font-black text-stroke-white">Skills</span></h1>
@@ -219,7 +219,7 @@
       </div>
     </main>
 
-    <footer class="mt-[50vh] mb-[10vh] box" id="contact">
+    <footer class="mt-[30vh] mb-[10vh] box" id="contact">
       <h1 class="font-medium text-stroke-white text-6xl text-center max-sm:text-center">Get In <span class="text-white">Touch</span></h1>
       <p class="text-center text-gray-400 mt-[5vh] max-sm:text-center">I am open to collaborating on your next project idea.</p>
 
